--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -1,16 +1,15 @@
 on:
   issues:
-    types: [ opened, labeled ]
-name: Issues
+    types: [opened, labeled]
+name: Issue
 jobs:
   issueHandler:
+    name: Issue Handler
     runs-on: windows-latest
-    name: Issue Verification
     steps:
       - uses: actions/checkout@main
-      - name: Verify Issue
-        uses: shovel-org/GithubActions@main
+      - name: Issue Handler
+        uses: ScoopInstaller/Scoop-GithubActions@main
         if: github.event.action == 'opened' || (github.event.action == 'labeled' && contains(github.event.issue.labels.*.name, 'verify'))
         env:
-          GITH_EMAIL: 41898282+github-actions[bot]@users.noreply.github.com
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
