--- a/.github/workflows/issue_comment.yml
+++ b/.github/workflows/issue_comment.yml
@@ -1,16 +1,15 @@
 on:
   issue_comment:
-    types: [ created ]
+    types: [created]
 name: Commented Pull Request
 jobs:
   pullRequestHandler:
     name: Pull Request Validator
     runs-on: windows-latest
     steps:
-    - uses: actions/checkout@main
-    - name: Pull Request Validation
-      uses: shovel-org/GithubActions@main
-      if: startsWith(github.event.comment.body, '/verify')
-      env:
-        GITH_EMAIL: 41898282+github-actions[bot]@users.noreply.github.com
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/checkout@main
+      - name: Pull Request Validator
+        uses: ScoopInstaller/GithubActions@main
+        if: startsWith(github.event.comment.body, '/verify')
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
