--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -1,25 +1,60 @@
 on:
   schedule:
-  - cron: '0 * * * *'
+    - cron: '2 * * * *'
 name: Excavator
 jobs:
   excavate:
     name: Excavator
     runs-on: windows-latest
     steps:
-    - uses: actions/checkout@main
-    - name: Excavate
-      uses: shovel-org/GithubActions@main
-      env:
-        GITH_EMAIL: 41898282+github-actions[bot]@users.noreply.github.com
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SKIP_UPDATED: '1'
-    - name: Run PowerShell script
-      shell: powershell
-      continue-on-error: true
-      run: |
-        Invoke-WebRequest -Uri https://cdn.jsdelivr.net/gh/Small-Ku/pwsh-hoyolab-checkin@main/sign.ps1 -OutFile sign.ps1
-        $env:CHECK_SECRET | Out-File -FilePath sign.json
-        .\sign.ps1
-      env:
-        CHECK_SECRET: ${{ secrets.CHECK_SECRET }}
+      - uses: actions/checkout@main
+      - name: Excavate
+        uses: ScoopInstaller/GithubActions@main
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SKIP_UPDATED: '1'
+          THROW_ERROR: '0'
+  signing:
+    name: Signing
+    runs-on: windows-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          repository: 'Small-Ku/pwsh-hoyolab-checkin'
+      - name: Signing
+        shell: powershell
+        continue-on-error: true
+        run: $env:CHECK_SECRET | Out-File -FilePath sign.json
+          .\sign.ps1
+        env:
+          CHECK_SECRET: ${{ secrets.CHECK_SECRET }}
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          repository: 'enpitsuLin/skland-daily-attendance'
+      - name: Install Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20.9.0
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          run_install: false
+      - name: Get pnpm store directory
+        shell: bash
+        run: |
+          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+      - uses: actions/cache@v4
+        name: Setup pnpm cache
+        with:
+          path: ${{ env.STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
+      - name: Install dependencies
+        run: pnpm install
+      - name: Run daily attendance
+        run: pnpm attendance
+        env:
+          SKLAND_TOKEN: ${{ secrets.SKLAND_TOKEN }}
