--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -7,10 +7,36 @@ jobs:
   excavate:
     name: Excavator
     runs-on: windows-latest
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Get Initial HEAD
+        id: vars
+        run: echo "PRE_HASH=$(git rev-parse HEAD)" >> $GITHUB_ENV
+
       - name: Excavate
         uses: ScoopInstaller/GithubActions@main
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SKIP_UPDATED: '1'
+
+      - name: Install git-filter-repo
+        run: |
+          pip install git-filter-repo
+
+      - name: Run Filter Repo
+        run: |
+          git filter-repo --refs $PRE_HASH..HEAD --replace-message .github/git-filter.txt --force
+        env:
+          PRE_HASH: ${{ env.PRE_HASH }}
+
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: ${{ github.ref }}
+          force: true
